--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -14,15 +14,48 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
-.login__container > img {
+a>img {
     object-fit: contain;
     height: 100px;
     margin-bottom: 40px;
 }
 
-.login__container > button {
+.login__container>button {
     margin-top: 50px;
     text-transform: inherit !important;
-    background-color: #0a8d48 !important;
-    color: white;
+    background-color: #63caab !important;
+    color: #FAEFDE;
+}
+
+.img {
+    transition: all 265ms ease-out;
+}
+
+.login__container a::before {
+    /* transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    content: " "; */
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    display: block;
+    background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    transition: all 265ms ease-out;
+}
+
+.login__container a:hover::before {
+    transform: scale(0);
+    transition: all 265ms ease-in;
+}
+
+.login__container a:hover img {
+    transform: scale(2);
+    -ms-transform: scale(2);
+    -webkit-transform: scale(2);
+    color: #fff;
+    background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 265ms ease-in;
 }
