--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,43 @@
 .app {
-  display: grid;
-  place-items: center;
-  height: 100vh;
-  background-color: #dadbd3;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    background-color: #dadbd3;
 }
 
 .app_body {
-  display: flex;
-  background-color: #ededed;
-  margin-top: -50px;
-  height: 90vh;
-  width: 90vw;
-  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+    display: flex;
+    border-radius: 15px;
+    background-color: #ffffff;
+    margin-top: 0px;
+    height: 90vh;
+    width: 80vw;
+    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    visibility: hidden;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: rgba(0, 255, 200, 0.75);
+    border-radius: 10px;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #007366;
 }
