--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -1,92 +1,114 @@
 .chat {
-  display: flex;
-  flex-direction: column;
-  flex: 0.65;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    flex: 0.65;
+    color: rgb(0, 0, 0);
+    border-radius: 15px;
+    max-width: 70%;
 }
 
 .chat__header {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid lightgray;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    box-shadow: 1px 1px 1px gray;
 }
 
 .chat__headerInfo {
-  flex: 1;
-  padding-left: 20px;
+    flex: 1;
+    padding-left: 20px;
 }
 
 .chat__headerInfo>h3 {
-  margin-bottom: 3px;
-  font-weight: 500;
+    margin-bottom: 3px;
+    font-weight: 8000;
+    font-size: larger;
 }
 
 .chat__headerInfo>p {
-  color: gray;
+    color: rgb(103, 95, 95);
+    font-size: small;
 }
 
 .chat__body {
-  flex: 1;
-  background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
-  background-repeat: repeat;
-  background-position: center;
-  padding: 30px;
-  overflow: scroll;
+    flex: 1;
+    /* background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png"); */
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    overflow: auto;
 }
 
 .chat__message {
-  position: relative;
-  font-size: 16px;
-  padding: 10px;
-  width: fit-content;
-  border-radius: 10px;
-  background-color: white;
-  margin-bottom: 30px;
+    font-size: 15px;
+    padding: 5px;
+    width: 40%;
 }
 
 .chat__timestamp {
-  margin-left: 10px;
-  font-size: xx-small;
+    margin-left: 5px;
+    font-size: x-small;
 }
 
 .chat__name {
-  position: absolute;
-  top: -15px;
-  font-weight: 800;
-  font-size: xx-small;
+    top: -10px;
+    font-weight: 800;
+    font-size: medium;
+    padding: 10px;
+}
+
+.chat__msg {
+    min-width: 50%;
+    max-width: 90%;
+    border-radius: 20px;
+    padding: 5px;
+    box-shadow: 0px 5px 5px 4px rgba(208, 207, 207, 0.313);
 }
 
 .chat__receiver {
-  margin-left: auto;
-  background-color: #dcf8c6;
+    margin-left: auto;
+}
+
+.chat__receiver>.chat__msg {
+    margin: 2px;
+    padding: 10px;
+    min-width: 50%;
+    max-width: 90%;
+    word-wrap: break-word;
+    word-break: break-all;
+    background-color: rgb(0, 227, 189);
+    box-shadow: 1px 5px 8px 1px rgba(77, 77, 77, 0.313);
+    color: white;
 }
 
 .chat__footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
-  border-top: 1px solid lightgray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
 }
 
 .chat__footer>form {
-  flex: 1;
-  display: flex;
+    flex: 1;
+    display: flex;
 }
 
 .chat__footer>form>input {
-  flex: 1;
-  border-radius: 30px;
-  padding: 10px;
-  border: none;
-  outline-width: 0;
+    background-color: rgb(221, 221, 221);
+    flex: 1;
+    border-radius: 30px;
+    padding: 10px;
+    border: none;
+    outline-width: 0;
 }
 
 .chat__footer>form>button {
-  display: none;
+    display: none;
 }
 
 .chat__footer>.MuiSvgIcon-root {
-  padding: 10px;
-  color: gray;
+    padding: 10px;
+    color: gray;
 }
