--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -2,9 +2,9 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    flex: 0.65;
+    flex: 0.70;
     color: rgb(0, 0, 0);
-    border-radius: 15px;
+    border-radius: 30px;
     max-width: 70%;
 }
 
@@ -33,11 +33,10 @@
 
 .chat__body {
     flex: 1;
-    /* background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png"); */
-    background-repeat: repeat;
-    background-position: center;
     padding: 30px;
     overflow: auto;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .chat__message {
