--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -2,10 +2,13 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    flex: 0.70;
+    flex-shrink: 0.70;
+    flex-grow: 0;
     color: rgb(0, 0, 0);
     border-radius: 30px;
     max-width: 70%;
+    min-width: 70%;
+
 }
 
 .chat__header {
@@ -36,7 +39,25 @@
     padding: 30px;
     overflow: auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    overflow-x: hidden
+}
+
+.chat>aside.emoji-picker-react {
+    width: 100%;
+    height: 30%;
+}
+
+.chat .emoji-picker-react .emoji-group:before {
+    position: static;
+}
+
+.chat aside.emoji-picker-react .content-wrapper:before {
+    display: none;
+}
+
+.chat__hide {
+    display: none;
 }
 
 .chat__message {
