--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 0px;
 }
 
 
@@ -30,7 +30,7 @@
 /* Handle */
 
  ::-webkit-scrollbar-thumb {
-    background: rgba(0, 255, 200, 0.75);
+    background: #00c4a3;
     border-radius: 10px;
 }
 
