--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -2,13 +2,11 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    flex-shrink: 0.70;
-    flex-grow: 0;
+    flex: 0.6;
     color: rgb(0, 0, 0);
     border-radius: 30px;
-    max-width: 70%;
-    min-width: 70%;
-
+    max-width: 60%;
+    min-width: 60%;
 }
 
 .chat__header {
@@ -97,7 +95,7 @@
     max-width: 90%;
     word-wrap: break-word;
     word-break: break-all;
-    background-color: rgb(0, 227, 189);
+    background-color: #00c4a3;
     box-shadow: 1px 5px 8px 1px rgba(77, 77, 77, 0.313);
     color: white;
 }
