--- a/frontend/src/Sidebar.css
+++ b/frontend/src/Sidebar.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border-right: 0.1px solid rgb(123, 123, 123);
-    flex-grow: 0.0;
+    border-right: 0.1px solid rgb(207, 207, 207);
+    flex: 0.5;
 }
 
 .sidebar__header {
@@ -34,7 +34,7 @@
 .sidebar__searchContainer {
     display: flex;
     align-items: center;
-    background-color: #ececec;
+    background-color: #282828;
     width: 100%;
     padding: 1px;
     margin: 5px;
@@ -44,7 +44,7 @@
 
 .sidebar__searchContainer>.MuiSvgIcon-root {
     border-radius: 30px;
-    color: rgb(0, 169, 135);
+    color: #3cc1ab;
     padding: 10px;
 }
 
@@ -53,11 +53,15 @@
 }
 
 .sidebar__searchContainer>input {
-    background-color: #ececec;
+    background-color: #282828;
     border: none;
-    margin-left: 5px;
+    margin-right: 5px;
     outline-width: 0;
     width: 100%;
+}
+
+.sidebar__searchContainer>input::placeholder {
+    color: #3cc1ab;
 }
 
 .sidebar__chats {
@@ -101,7 +105,7 @@
     align-content: center;
     display: flex;
     justify-content: center;
-    background-color: #63CAAB;
+    background-color: #3cc1ab;
 }
 
 .add__contact__button>.MuiSvgIcon-root {
@@ -109,7 +113,7 @@
     font-size: 20px;
     padding: 3px;
     flex: 1;
-    background-color: #63CAAB;
+    background-color: #3cc1ab;
     overflow: auto;
     border-radius: 15px;
 }
