--- a/frontend/src/SidebarChat.css
+++ b/frontend/src/SidebarChat.css
@@ -1,41 +1,56 @@
 .sidebarChat {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    background-color: #d6d6d6;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+    border-left: 10px solid #1e1e1e;
+    cursor: pointer;
+    box-shadow: 0px 1px 10px 1px rgb(140, 140, 140);
 }
 
-
 .sidebarChat__head {
-  display: flex;
-  padding: 10px;
-  align-items: center;
-  flex-direction: row;
-  cursor: pointer;
-  border-bottom: 1px solid #f6f6f6;
-
+    display: flex;
+    padding: 5px;
+    align-items: center;
+    flex-direction: row;
 }
 
 .sidebarChat:hover {
-  background-color: #f5f6f6;
+    background-color: rgb(239, 239, 239);
+    border-left: 10px solid #3cc1ab;
+    transition: 300ms;
 }
 
 .sidebarChat__selected {
-  background-color: #f0f2f5;
+    background-color: #1e1e1e;
+    border-left: 10px solid #3cc1ab;
+    color: white;
 }
 
 .sidebarChat__selected:hover {
-  background-color: #f0f2f5;
+    background-color: #3cc1ab;
+    border-left: 10px solid #1e1e1e;
+    transition: 300ms;
+    color: black;
 }
 
 .sidebarChat__info {
-  margin-left: 15px;
-
+    margin-left: 15px;
 }
 
 .sidebarChat__info>p {
-  font-size: 7px;
+    font-size: 10px;
 }
 
 .sidebarChat__info>h2 {
-  font-size: 16px;
-  margin-bottom: 8px;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.sidebarChat__tail {
+    width: 100%;
+    text-align: center;
 }
