--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -15,7 +15,7 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    box-shadow: 1px 1px 1px gray;
+    box-shadow: 0px 2px #888888;
 }
 
 .chat__headerInfo {
@@ -40,7 +40,8 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden
+    overflow-x: hidden;
+
 }
 
 .chat>aside.emoji-picker-react {
