--- a/frontend/src/DefaultScreen.css
+++ b/frontend/src/DefaultScreen.css
@@ -1,9 +1,12 @@
 .defaultScreen {
     background-color: #f8f8f8;
     height: 100%;
-    flex: 0.65;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
+    flex-shrink: 0.70;
+    flex-grow: 0;
     align-items: center;
     justify-content: center;
 }
