--- a/frontend/src/Chat.css
+++ b/frontend/src/Chat.css
@@ -2,18 +2,19 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    flex: 0.6;
+    flex-shrink: 0.70;
+    flex-grow: 0;
     color: rgb(0, 0, 0);
     border-radius: 30px;
-    max-width: 60%;
-    min-width: 60%;
+    max-width: 70%;
+    min-width: 70%;
+
 }
 
 .chat__header {
     padding: 20px;
     display: flex;
     align-items: center;
-    box-shadow: 0px 2px #888888;
 }
 
 .chat__headerInfo {
@@ -38,8 +39,7 @@
     overflow: auto;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
-
+    overflow-x: hidden
 }
 
 .chat>aside.emoji-picker-react {
@@ -96,7 +96,7 @@
     max-width: 90%;
     word-wrap: break-word;
     word-break: break-all;
-    background-color: #00c4a3;
+    background-color: rgb(0, 227, 189);
     box-shadow: 1px 5px 8px 1px rgba(77, 77, 77, 0.313);
     color: white;
 }
