--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -1,5 +1,5 @@
 .login {
-    background-color: #f8f8f8;
+    background-color: rgb(37, 37, 37);
     height: 100vh;
     width: 100vw;
     display: grid;
@@ -7,17 +7,34 @@
 }
 
 .login__container {
-    padding: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
     text-align: center;
-    background-color: white;
+    background-color: #3cc1ab31;
+    color: white;
     border-radius: 10px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
+h1 {
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
 a>img {
     object-fit: contain;
-    height: 100px;
-    margin-bottom: 40px;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 30px;
+    transition: 300ms ease-in;
+}
+
+a>img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    transition: 300ms ease-out;
 }
 
 .login__container>button {
@@ -27,7 +44,8 @@ a>img {
     color: #FAEFDE;
 }
 
-.img {
+
+/* .img {
     transition: all 265ms ease-out;
 }
 
@@ -35,7 +53,7 @@ a>img {
     /* transform: scale(1);
     -ms-transform: scale(1);
     -webkit-transform: scale(1);
-    content: " "; */
+    content: " "; 
     width: 60px;
     height: 60px;
     border-radius: 100%;
@@ -45,17 +63,53 @@ a>img {
 }
 
 .login__container a:hover::before {
-    transform: scale(0);
+    transform: scale(1.5);
     transition: all 265ms ease-in;
 }
 
 .login__container a:hover img {
-    transform: scale(2);
-    -ms-transform: scale(2);
-    -webkit-transform: scale(2);
+    transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
     color: #fff;
     background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 265ms ease-in;
+}
+
+.login__container a:hover::after {
+    transform: scale(1);
+    transition: all 265ms ease-in;
+} */
+
+.login-btn {
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+    color: white;
+    font-size: large;
+    font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(37, 37, 37);
+    border-radius: 15px;
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    border: 3px solid #3cc1ab;
+}
+
+.login-btn:hover {
+    transition: 400ms;
+    background-color: #00715ec4;
+    border: 3px solid #000000;
+}
+
+.login-btn>img {
+    margin-left: 5px;
+    width: 16%;
 }
